--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
     <!-- <script src="/js/task-01.js" type="module"></script> -->
     <script src="/js/task-02.js" type="module"></script>
 </body>
-</html>
+</html>t 
