--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS-HW-02</title>
 </head>
 <body>
-    <!-- <script src="/js/task-01.js" type="module"></script> -->
-    <script src="/js/task-02.js" type="module"></script>
+    <!-- <script src="./js/task-01.js" type="module"></script> -->
+    <script src="./js/task-02.js" type="module"></script>
 </body>
 </html>
